--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_bloc: ^3.2.0
+  dio: ^3.0.3
+  http: ^0.12.0+4
+  url_launcher: ^5.2.0
+  flutter_html: ^0.11.1
+  cached_network_image: ^2.1.0+1
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.7.4
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  image_path: 'assets/images/icon.png'
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
